--- a/app/public/templates/retros/show.html
+++ b/app/public/templates/retros/show.html
@@ -1,7 +1,6 @@
   <div class="row">
 
       <div class="col-md-12 ">
-
           <form class="form-horizontal" ng-submit="ctrl.submit(retro, input, retroForm.$valid)" name="retroForm" novalidate ng-controller="FormConsumeController as ctrl">
               <div ng-model="input" fb-form="default" fb-default="defaultValue"></div>
               <div class="form-group">
@@ -26,3 +25,16 @@
     </label>
     <div ng-if="diagnose"> {{retro}} </div>
   </div>
+
+    <ul>
+      <li ng-repeat="message in messages">
+        {{message}}
+      </li>
+    </ul>
+
+    <form name="chatForm" ng-submit="submit(form, chatForm.$valid)">
+      <input ng-model="form.body" type="text" class="form-control" name="body">
+      <button type="submit" class="btn btn-default">Send</button>
+    </form>
+
+
